--- a/package.json
+++ b/package.json
@@ -12,17 +12,28 @@
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^3.1.1",
     "@tsconfig/svelte": "^5.0.4",
+    "@types/node": "^22.5.4",
     "autoprefixer": "^10.4.20",
     "daisyui": "^4.12.10",
-    "postcss": "^8.4.41",
-    "svelte": "^5.0.0-next.225",
+    "postcss": "^8.4.45",
+    "svelte": "^5.0.0-next.245",
     "svelte-check": "^3.8.5",
-    "tailwindcss": "^3.4.10",
+    "tailwindcss": "^3.4.9",
     "tslib": "^2.6.3",
     "typescript": "^5.5.3",
     "vite": "^5.4.1"
   },
   "dependencies": {
-    "firebase": "^10.13.0"
+    "@radix-ui/react-slot": "^1.1.0",
+    "bits-ui": "^0.21.13",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "firebase": "^10.13.0",
+    "lucide-react": "^0.441.0",
+    "lucide-svelte": "^0.441.0",
+    "mode-watcher": "^0.4.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1",
+    "tailwindcss-animate": "^1.0.7"
   }
 }
