--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,9 +2,18 @@
   "extends": "@tsconfig/svelte/tsconfig.json",
   "compilerOptions": {
     "target": "ESNext",
+    "composite": true,
+    "baseUrl": ".",
+    "paths": {
+      "$service/*": ["./src/service/*"],
+      "$lib": ["./src/lib"],
+      "$lib/*": ["./src/lib/*"]
+    },
     "useDefineForClassFields": true,
     "module": "ESNext",
     "resolveJsonModule": true,
+    "emitDeclarationOnly": true,
+    "allowImportingTsExtensions": true,
     /**
      * Typecheck JS in `.svelte` and `.js` files by default.
      * Disable checkJs if you'd like to use dynamic types in JS.
